--- a/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
+++ b/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
@@ -8,4 +8,6 @@
       <section id="third-child"></section>
       <section id="fourth-and-last-child"></section>
     </section>
+    
   </main>
+  <script src="script.js"></script>
