--- a/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
+++ b/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
@@ -57,7 +57,13 @@
   </head>
   <body>
     <script>
-      // COLOQUE SEU CÓDIGO AQUI
+
+      let trybeTrip = document.createElement('h1');
+        trybeTrip.innerHTML = 'TrybeTrip - Agência de Viagens';
+      let body1 = document.getElementsByTagName('body');
+      
+        body1.appendChild(trybeTrip);
+
     </script>
   </body>
 </html>
