resolvendo com o auxilio do gabarito

--- a/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
+++ b/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
@@ -60,9 +60,7 @@
 
       let trybeTrip = document.createElement('h1');
         trybeTrip.innerHTML = 'TrybeTrip - Agência de Viagens';
-      let body1 = document.getElementsByTagName('body');
-      
-        body1.appendChild(trybeTrip);
+      document.body.appendChild(trybeTrip);
 
     </script>
   </body>
