tentando resolver sozinho, errando e tentando novamente com auxilio do gabarito

--- a/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
+++ b/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
@@ -62,6 +62,14 @@
         trybeTrip.innerHTML = 'TrybeTrip - Agência de Viagens';
       document.body.appendChild(trybeTrip);
 
+      let main = document.createElement('main');
+      main.className = 'main-content';
+      document.body.appendChild(main);
+
+      let section1 = document.createElement('section');
+      section1.className = 'center-content';
+      main.appendChild(section1);
+
     </script>
   </body>
 </html>
