consegui resolver a 4 sem o auxilio do gabarito :rocket:

--- a/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
+++ b/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
@@ -70,6 +70,10 @@
       section1.className = 'center-content';
       main.appendChild(section1);
 
+      let paragrah1 = document.createElement('p');
+      paragrah1.innerHTML = 'Algum texto aqui';
+      section1.appendChild(paragrah1);
+
     </script>
   </body>
 </html>
