--- a/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
+++ b/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
@@ -74,6 +74,14 @@
       paragrah1.innerHTML = 'Algum texto aqui';
       section1.appendChild(paragrah1);
 
+      let section2 = document.createElement('section');
+      section2.className = 'left-content';
+      main.appendChild(section2);
+
+      
+
+
+
     </script>
   </body>
 </html>
