--- a/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
+++ b/fundamentos/secao-04-JS-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-Com-Elementos/index.html
@@ -78,6 +78,15 @@
       section2.className = 'left-content';
       main.appendChild(section2);
 
+      let section3 = document.createElement('section');
+      section3.className = 'right-content';
+      main.appendChild(section3);
+
+      let image = document.createElement('img');
+      image.src = 'https://picsum.photos/200';
+      image.className = 'small-image';
+      section3.appendChild(image);
+
       
 
 
