exercicio de fixação finalizado. OFICIALMENTE MEU PRIMEIRO FORMULÁRIO EM HTML :rocket:

--- a/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-01-HTML-e-CSS-forms/index.html
+++ b/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-01-HTML-e-CSS-forms/index.html
@@ -9,9 +9,10 @@
 <body> <br> <br> <b>Insira abaixo seu nome de usuário e senha.</b>
     <label for="email"></label>
     <form action="" method="GET"> <br>
-        Email ou nome de usuário <input type="email" placeholder="Digite seu email" required value="" name="email-box" id="email"> <br> <br>
+        Email ou nome de usuário <input type="email" placeholder="Digite seu email" required value="" name="email-box" id="email" autocomplete="off" autofocus> <br> <br>
         Senha <input type="password" placeholder="Digite sua senha" required name="senha-box" id="senha"> <br> <br>
         Lembrar? <input type="checkbox" name="Lembrar" id="check-lembrar">
+        <input type="submit" title="Enviar">
     </form>
 </body>
 </html>
