--- a/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-02-Bibliotecas-JS-e-Framework/form.html
+++ b/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-02-Bibliotecas-JS-e-Framework/form.html
@@ -11,10 +11,10 @@
   <body>
     <h1 id="title">Formulário Trybe Travel</h1>
 
-    <div class="display-7">
+    <div class="form-group">
     <form id="main-form">
       <fieldset>
-      <label for="fullName">Nome Completo:</label>
+      <label  for="fullName">Nome Completo:</label>
       <input
         type="text"
         id="fullName"
