--- a/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-04-CSS-Flexbox-part2/index.html
+++ b/fundamentos/secao-05-HTML-e-CSS-Forms-FLexbox-e-Responsivo/dia-04-CSS-Flexbox-part2/index.html
@@ -3,42 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS FLEXBOX - ALIGN SELF</title>
-    <style>
-      .container {
-        border: 1px solid black;
-        display: flex;
-        height: 300px;
-        margin: auto;
-        width: 500px;
-      }
-
-      .keep {
-        align-self: center;
-        background-color: #FAA488;
-        display: flex;
-        justify-content: center;
-        width: 150px;
-        list-style: none;
-      }
-
-      .change {
-        
-        align-self: safe;
-        background-color: #FBD26A;
-        display: flex;
-        justify-content: center;
-        width: 200px;
-        list-style: none;
-      }
-
-    </style>
+    <title>TRYFLIX</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <ul class="container">
-      <li class="keep">REFERÊNCIA</li>
-      <li class="change">ELEMENTO TESTE</li>
-      <li class="keep">REFERÊNCIA</li>
-    </ul>
+    <header class="header-container">
+      <nav class="menu-container">
+        <ul>
+          <li>Cadastre-se</li>
+          <li>Conecte-se</li>
+          <li>Sobre</li>
+        </ul>
+      </nav>
+      <section class="logo-container">
+        <img
+          src="https://fontmeme.com/permalink/201215/2044acc483426f38dc2c79c3c84ab998.png"
+          alt="Website Logo"
+        />
+      </section>
+    </header>
+
   </body>
 </html>
